--- a/index.html
+++ b/index.html
@@ -11,5 +11,14 @@
 			<h1><a href="#">Portfolio <span>by eewano</span></a></h1>
 			<a href="#menu">Menu</a>
 		</header>
+
+		<!-- Nav -->
+		<nav id="menu">
+			<ul class="links">
+				<li><a href="#">Home</a></li>
+				<li><a href="#">Tutorial</a></li>
+				<li><a href="#">Advanced</a></li>
+			</ul>
+		</nav>
 	</body>
 </html>
