--- a/index.html
+++ b/index.html
@@ -4,6 +4,13 @@
 		<title>eewano Portfolio</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="css/box_model.css">
+		<link rel="stylesheet" href="css/type.css">
+		<link rel="stylesheet" href="css/list.css">
+		<link rel="stylesheet" href="css/section_article.css">
+		<link rel="stylesheet" href="css/header.css">
+		<link rel="stylesheet" href="css/menu.css">
 	</head>
 	<body>
 		<!-- Header -->
