フッターの一部を作成
フッターの一部のhtmlを作成

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 		<link rel="stylesheet" href="css/section_article.css">
 		<link rel="stylesheet" href="css/header.css">
 		<link rel="stylesheet" href="css/menu.css">
+		<link rel="stylesheet" href="css/flex.css">
+		<link rel="stylesheet" href="css/footer.css">
 	</head>
 	<body>
 		<!-- Header -->
@@ -27,5 +29,49 @@
 				<li><a href="#">Advanced</a></li>
 			</ul>
 		</nav>
+
+		<!-- Footer -->
+		<footer id="footer">
+			<div class="inner">
+				<div class="flex flex-3">
+					<div class="col">
+						<h3>Develop Member</h3>
+						<ul class="alt">
+							<li><a href="#">Profiles</a></li>
+							<li><a href="#">What are they doing ?</a></li>
+							<li><a href="#">Their works</a></li>
+							<li><a href="#">Special page</a></li>
+						</ul>
+					</div>
+					<div class="col">
+						<h3>Programming Skills</h3>
+						<ul class="alt">
+							<li><a href="#">C and C++</a></li>
+							<li><a href="#">Unity with C#</a></li>
+							<li><a href="#">Website with html, css, Javascript</a></li>
+							<li><a href="#">Database with PHP</a></li>
+						</ul>
+					</div>
+					<div class="col">
+						<h3>Framework collection</h3>
+						<ul class="alt">
+							<li><a href="#">PHP with Laravel</a></li>
+							<li><a href="#">Rust with Rocket</a></li>
+							<li><a href="#">Javascript with React.js</a></li>
+							<li><a href="#">C and C++ with OpenGL</a></li>
+						</ul>
+					</div>
+				</div>
+			</div>
+			<div class="copyright">
+				<ul class="icons">
+					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+					<li><a href="#" class="icon fa-instabram"><span class="label">Instagram</span></a></li>
+					<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
+				</ul>
+				&copy; Untitled. Design: <a href="#">TEMPLATED</a>. Images: <a href="#">Coverr</a>. Video: <a href="#">Coverr</a>
+			</div>
+		</footer>
 	</body>
 </html>
