ヘッダーでのアイコンの追加
ヘッダー箇所にtwitter等のアイコンを追加

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>eewano Portfolio</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/box_model.css">
 		<link rel="stylesheet" href="css/type.css">
@@ -65,10 +66,10 @@
 			</div>
 			<div class="copyright">
 				<ul class="icons">
-					<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-					<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-					<li><a href="#" class="icon fa-instabram"><span class="label">Instagram</span></a></li>
-					<li><a href="#" class="icon fa-snapchat"><span class="label">Snapchat</span></a></li>
+					<li><a href="#" class="icon"><i class="fab fa-twitter"></i></a></li>
+					<li><a href="#" class="icon"><i class="fab fa-facebook-f"></i></a></li>
+					<li><a href="#" class="icon"><i class="fab fa-instagram"></i></a></li>
+					<li><a href="#" class="icon"><i class="fab fa-snapchat"></i></a></li>
 				</ul>
 				&copy; Untitled. Design: <a href="#">TEMPLATED</a>. Images: <a href="#">Coverr</a>. Video: <a href="#">Coverr</a>
 			</div>
