Twitterアイコン等の大きさとマージンを変更
Twitterアイコン等のサイズ及びアイコンエリアのmargin-bottomを変更

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 			</div>
 			<div class="copyright">
 				<ul class="icons">
-					<li><a href="#" class="icon"><i class="fab fa-twitter"></i></a></li>
-					<li><a href="#" class="icon"><i class="fab fa-facebook-f"></i></a></li>
-					<li><a href="#" class="icon"><i class="fab fa-instagram"></i></a></li>
-					<li><a href="#" class="icon"><i class="fab fa-snapchat"></i></a></li>
+					<li><a href="#" class="icon"><i class="fab fa-twitter fa-2x"></i></a></li>
+					<li><a href="#" class="icon"><i class="fab fa-facebook-f fa-2x"></i></a></li>
+					<li><a href="#" class="icon"><i class="fab fa-instagram fa-2x"></i></a></li>
+					<li><a href="#" class="icon"><i class="fab fa-snapchat fa-2x"></i></a></li>
 				</ul>
 				&copy; Untitled. Design: <a href="#">TEMPLATED</a>. Images: <a href="#">Coverr</a>. Video: <a href="#">Coverr</a>
 			</div>
