メインエリア最下段のコンテンツを作成
当ページのメインエリアにて、最下段のコンテンツの作成とレイアウトの調整

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 		<link rel="stylesheet" href="css/menu.css">
 		<link rel="stylesheet" href="css/flex.css">
 		<link rel="stylesheet" href="css/footer.css">
+		<link rel="stylesheet" href="css/wrapper.css">
+		<link rel="stylesheet" href="css/video.css">
+		<link rel="stylesheet" href="css/image.css">
 	</head>
 	<body>
 		<!-- Header -->
@@ -30,6 +33,68 @@
 				<li><a href="#">Advanced</a></li>
 			</ul>
 		</nav>
+
+		<!-- Main -->
+		<div id="main">
+			<!-- Three -->
+			<section class="wrapper">
+				<div class="inner">
+					<header class="align-center">
+						<h2>Recommended Movies</h2>
+						<p>These are the movies I really want to recommend. Check it!</p>
+					</header>
+
+					<!-- 3 column Video Section -->
+					<div class="flex flex-3">
+						<!-- Sec 1 -->
+						<div class="video col">
+							<div class="image fit">
+								<img src="images/main_sec3_video01.jpg" alt="" />
+								<div class="arrow">
+									<div class="icon_area">
+										<i class="fas fa-play fa-2x"></i>
+									</div>
+								</div>
+							</div>
+							<p class="caption">
+								A story of the earth born over a long period of time.
+							</p>
+							<a href="#" class="link"><span>Click Me</span></a>
+						</div>
+						<!-- Sec 2 -->
+						<div class="video col">
+							<div class="image fit">
+								<img src="images/main_sec3_video02.jpg" alt="" />
+								<div class="arrow">
+									<div class="icon_area">
+										<i class="fas fa-play fa-2x"></i>
+									</div>
+								</div>
+							</div>
+							<p class="caption">
+								Why is the sun hot? What is blowing on the surface of the sun?
+							</p>
+							<a href="#" class="link"><span>Click Me</span></a>
+						</div>
+						<!-- Sec 3 -->
+						<div class="video col">
+							<div class="image fit">
+								<img src="images/main_sec3_video03.jpg" alt="" />
+								<div class="arrow">
+									<div class="icon_area">
+										<i class="fas fa-play fa-2x"></i>
+									</div>
+								</div>
+							</div>
+							<p class="caption">
+								Miracle technology to create a city that looks beautiful from a distance.
+							</p>
+							<a href="#" class="link"><span>Click Me</span></a>
+						</div>
+					</div>
+				</div>
+			</section>
+		</div>
 
 		<!-- Footer -->
 		<footer id="footer">
