バナーエリアを作成
バナーエリアのhtmlの作成し、レイアウトを調整

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
 		<link rel="stylesheet" href="css/wrapper.css">
 		<link rel="stylesheet" href="css/video.css">
 		<link rel="stylesheet" href="css/image.css">
+		<link rel="stylesheet" href="css/banner.css">
+		<link rel="stylesheet" href="css/button.css">
 	</head>
 	<body>
 		<!-- Header -->
@@ -33,6 +35,18 @@
 				<li><a href="#">Advanced</a></li>
 			</ul>
 		</nav>
+
+		<!-- Banner -->
+		<section id="banner" data-video="images/banner">
+			<div class="inner">
+				<header>
+					<h1>This is My Portfolio</h1>
+					<p>Created for design appeal and does not use a framework.<br>
+					In addition to the layout by the handmade boot strap, the simple motion by jQuery is implemented.</p>
+				</header>
+				<a href="#" class="button big alt scrolly">Click here!</a>
+			</div>
+		</section>
 
 		<!-- Main -->
 		<div id="main">
