メインエリア最上段のコンテンツを作成
当ページのメインエリアにて、最上段のコンテンツの作成とレイアウトの調整

--- a/index.html
+++ b/index.html
@@ -50,6 +50,46 @@
 
 		<!-- Main -->
 		<div id="main">
+			<!-- One -->
+			<section class="wrapper style1">
+				<div class="inner">
+					<header class="align-center">
+						<h2>Photos, icons and links</h2>
+						<p>Create 2 blocks area using free image and font awesome.</p>
+					</header>
+					<!-- 2 Column Video Section -->
+					<div class="flex flex-2">
+						<div class="video col">
+							<div class="image fit">
+								<img src="images/main_sec1_01.jpg" alt="" />
+								<div class="arrow">
+									<div class="icon_area">
+										<i class="fas fa-play fa-4x"></i>
+									</div>
+								</div>
+							</div>
+							<p class="caption">
+								1st: Wolf and Nature.
+							</p>
+							<a href="#" class="link"><span>Click Me</span></a>
+						</div>
+						<div class="video col">
+							<div class="image fit">
+								<img src="images/main_sec1_02.jpg" alt="" />
+								<div class="arrow">
+									<div class="icon_area">
+										<i class="fas fa-play fa-4x"></i>
+									</div>
+								</div>
+							</div>
+							<p class="caption">
+								2nd: Cover drawn in beautiful font.
+							</p>
+							<a href="#" class="link"><span>Click Me</span></a>
+						</div>
+					</div>
+				</div>
+			</section>
 			<!-- Three -->
 			<section class="wrapper">
 				<div class="inner">
