--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 		<link rel="stylesheet" href="css/image.css">
 		<link rel="stylesheet" href="css/banner.css">
 		<link rel="stylesheet" href="css/button.css">
+		<link rel="stylesheet" href="css/tab.css">
 	</head>
 	<body>
 		<!-- Header -->
@@ -90,6 +91,25 @@
 					</div>
 				</div>
 			</section>
+
+			<!-- Two -->
+			<section class="wrapper style2">
+				<div class="inner">
+					<header>
+						<h2>Picture Room</h2>
+						<p>Please click the tab on the left to browse the post photos you are interested in.</p>
+					</header>
+					<!-- Tabbed Video Section -->
+					<div class="flex flex-tabs">
+						<ul class="tab-list">
+							<li><a href="#" data-tab="tab-1" class="active">Beautiful nature</a></li>
+							<li><a href="#" data-tab="tab-2">Art collection</a></li>
+							<li><a href="#" data-tab="tab-3">Free illustrations</a></li>
+						</ul>
+					</div>
+				</div>
+			</section>
+
 			<!-- Three -->
 			<section class="wrapper">
 				<div class="inner">
