メインエリア中段のコンテンツを作成
写真の追加及びメインエリア中段のコンテンツの作成とレイアウトの設定

--- a/index.html
+++ b/index.html
@@ -106,6 +106,54 @@
 							<li><a href="#" data-tab="tab-2">Art collection</a></li>
 							<li><a href="#" data-tab="tab-3">Free illustrations</a></li>
 						</ul>
+
+						<div class="tabs">
+							<!-- Tab 1 -->
+							<div class="tab tab-1 flex flex-3 active">
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_01.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_02.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_03.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_04.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_05.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_06.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 			</section>
