メインエリア中段の選択ボタンの切り替え設定
メインエリア中段の選択ボタンの切り替え設定をjQueryにて実装

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<title>eewano Portfolio</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
 		<link rel="stylesheet" href="css/main.css">
 		<link rel="stylesheet" href="css/box_model.css">
@@ -261,5 +262,8 @@
 				&copy; Untitled. Design: <a href="#">TEMPLATED</a>. Images: <a href="#">Coverr</a>. Video: <a href="#">Coverr</a>
 			</div>
 		</footer>
+
+		<!-- Scripts -->
+		<script src="js/main.js"></script>
 	</body>
 </html>
