メインエリア中段の写真の追加と切り替えの実装
メインエリア中段にて、各ジャンルの写真の追加と切り替え機能の実装

--- a/index.html
+++ b/index.html
@@ -154,6 +154,98 @@
 									<a href="#" class="link"><span>Click Me</span></a>
 								</div>
 							</div>
+
+							<!-- Tab 2 -->
+							<div class="tab tab-2 flex flex-3">
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_07.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_08.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_09.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_10.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_11.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_12.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+							</div>
+
+							<!-- Tab 3 -->
+							<div class="tab tab-3 flex flex-3">
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_13.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_14.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_15.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_16.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_17.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+								<!-- Video Thumbnail -->
+								<div class="video col">
+									<div class="image fit">
+										<img src="images/main_sec2_18.jpg" alt="" />
+									</div>
+									<a href="#" class="link"><span>Click Me</span></a>
+								</div>
+							</div>
 						</div>
 					</div>
 				</div>
